// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkCheckboxV2 Description should render snapshot with title and description 1`] = `
<DocumentFragment>
  <label
    class="bpk-checkbox-v2"
    data-backpack-ds-component="CheckboxV2"
    data-part="root"
    data-scope="checkbox"
    data-state="unchecked"
    dir="ltr"
    for="checkbox::ra::input"
    id="checkbox::ra:"
  >
    <div
      aria-hidden="true"
      class="bpk-checkbox-v2__control"
      data-part="control"
      data-scope="checkbox"
      data-state="unchecked"
      dir="ltr"
      id="checkbox::ra::control"
    />
    <div>
      <span
        class="bpk-checkbox-v2__label"
        data-part="label"
        data-scope="checkbox"
        data-state="unchecked"
        dir="ltr"
        id="checkbox::ra::label"
      >
        Price alerts
      </span>
      <span
        class="bpk-checkbox-v2__description"
      >
        We'll email you about price drops.
      </span>
    </div>
    <input
      aria-invalid="false"
      aria-labelledby="checkbox::ra::label"
      id="checkbox::ra::input"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
      type="checkbox"
      value="on"
    />
  </label>
</DocumentFragment>
`;

exports[`BpkCheckboxV2 Root should render correctly with default props 1`] = `
<DocumentFragment>
  <label
    class="bpk-checkbox-v2"
    data-backpack-ds-component="CheckboxV2"
    data-part="root"
    data-scope="checkbox"
    data-state="unchecked"
    dir="ltr"
    for="checkbox::r0::input"
    id="checkbox::r0:"
  >
    <div
      aria-hidden="true"
      class="bpk-checkbox-v2__control"
      data-part="control"
      data-scope="checkbox"
      data-state="unchecked"
      dir="ltr"
      id="checkbox::r0::control"
    />
    <span
      class="bpk-checkbox-v2__label"
      data-part="label"
      data-scope="checkbox"
      data-state="unchecked"
      dir="ltr"
      id="checkbox::r0::label"
    >
      Accept terms
    </span>
    <input
      aria-invalid="false"
      aria-labelledby="checkbox::r0::label"
      id="checkbox::r0::input"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
      type="checkbox"
      value="on"
    />
  </label>
</DocumentFragment>
`;

exports[`BpkCheckboxV2 Root should render in checked state 1`] = `
<DocumentFragment>
  <label
    class="bpk-checkbox-v2"
    data-backpack-ds-component="CheckboxV2"
    data-part="root"
    data-scope="checkbox"
    data-state="checked"
    dir="ltr"
    for="checkbox::r1::input"
    id="checkbox::r1:"
  >
    <div
      aria-hidden="true"
      class="bpk-checkbox-v2__control"
      data-part="control"
      data-scope="checkbox"
      data-state="checked"
      dir="ltr"
      id="checkbox::r1::control"
    />
    <span
      class="bpk-checkbox-v2__label"
      data-part="label"
      data-scope="checkbox"
      data-state="checked"
      dir="ltr"
      id="checkbox::r1::label"
    >
      Accept terms
    </span>
    <input
      aria-invalid="false"
      aria-labelledby="checkbox::r1::label"
      checked=""
      id="checkbox::r1::input"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
      type="checkbox"
      value="on"
    />
  </label>
</DocumentFragment>
`;

exports[`BpkCheckboxV2 Root should render in disabled state 1`] = `
<DocumentFragment>
  <label
    class="bpk-checkbox-v2"
    data-backpack-ds-component="CheckboxV2"
    data-disabled=""
    data-part="root"
    data-scope="checkbox"
    data-state="unchecked"
    dir="ltr"
    for="checkbox::r2::input"
    id="checkbox::r2:"
  >
    <div
      aria-hidden="true"
      class="bpk-checkbox-v2__control"
      data-disabled=""
      data-part="control"
      data-scope="checkbox"
      data-state="unchecked"
      dir="ltr"
      id="checkbox::r2::control"
    />
    <span
      class="bpk-checkbox-v2__label"
      data-disabled=""
      data-part="label"
      data-scope="checkbox"
      data-state="unchecked"
      dir="ltr"
      id="checkbox::r2::label"
    >
      Accept terms
    </span>
    <input
      aria-invalid="false"
      aria-labelledby="checkbox::r2::label"
      disabled=""
      id="checkbox::r2::input"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
      type="checkbox"
      value="on"
    />
  </label>
</DocumentFragment>
`;

exports[`BpkCheckboxV2 Root should render in indeterminate state 1`] = `
<DocumentFragment>
  <label
    class="bpk-checkbox-v2"
    data-backpack-ds-component="CheckboxV2"
    data-part="root"
    data-scope="checkbox"
    data-state="indeterminate"
    dir="ltr"
    for="checkbox::r4::input"
    id="checkbox::r4:"
  >
    <div
      aria-hidden="true"
      class="bpk-checkbox-v2__control"
      data-part="control"
      data-scope="checkbox"
      data-state="indeterminate"
      dir="ltr"
      id="checkbox::r4::control"
    />
    <span
      class="bpk-checkbox-v2__label"
      data-part="label"
      data-scope="checkbox"
      data-state="indeterminate"
      dir="ltr"
      id="checkbox::r4::label"
    >
      Accept terms
    </span>
    <input
      aria-invalid="false"
      aria-labelledby="checkbox::r4::label"
      id="checkbox::r4::input"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
      type="checkbox"
      value="on"
    />
  </label>
</DocumentFragment>
`;

exports[`BpkCheckboxV2 Root should render in invalid state 1`] = `
<DocumentFragment>
  <label
    class="bpk-checkbox-v2"
    data-backpack-ds-component="CheckboxV2"
    data-invalid=""
    data-part="root"
    data-scope="checkbox"
    data-state="unchecked"
    dir="ltr"
    for="checkbox::r3::input"
    id="checkbox::r3:"
  >
    <div
      aria-hidden="true"
      class="bpk-checkbox-v2__control"
      data-invalid=""
      data-part="control"
      data-scope="checkbox"
      data-state="unchecked"
      dir="ltr"
      id="checkbox::r3::control"
    />
    <span
      class="bpk-checkbox-v2__label"
      data-invalid=""
      data-part="label"
      data-scope="checkbox"
      data-state="unchecked"
      dir="ltr"
      id="checkbox::r3::label"
    >
      Accept terms
    </span>
    <input
      aria-invalid="true"
      aria-labelledby="checkbox::r3::label"
      id="checkbox::r3::input"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
      type="checkbox"
      value="on"
    />
  </label>
</DocumentFragment>
`;
